From version 0.5.5 to 0.5.6
- java packaging policies can be passed through configure.
- unneeded patches removed from rpm spec file.
- network access policy saved in registry to make it easier to calculate nat.

From verison 0.5.4 to 0.5.5
- python swig binaries now placed correctly.
- new init script has locking.  Status and condrestart added.
- new spec file for rpm builds.
- new --with-initrddir and default for /etc/rc.d/init.d.
- better python and php support for packaging.

From version 0.5.3 to 0.5.4
- some build notes.
- bugfix for setting domain identities in "from" 

From version 0.5.2 to 0.5.3
- SIP publish can be forwarded through plugins. Forward plugin publishes
  status to insecure calling domain.

From version 0.5.1 to 0.5.2
- rebuilt ack and proper in-dialog re-invite handling, now works.

From version 0.5.0 to 0.5.1
- call source referencing by request uri rather than resolved interface.
- sms instant messaging multi-nodal and remote uri support.
- cfwd busy can be used if no dnd or away forward target set.
- sip publish messages now updates internal presence status.
- simplified call forwarding detection based on presence status.

From version 0.4.7 to 0.5.0
- static routing tables with re-write rules and inter-node call support.
- get interface in arriving call before checking port id.
- new temporary records no longer double inced at invite.
- rewrite of timing control in background thread for accuracy and bugfixes.

From version 0.4.5 to 0.4.6
- 4 second call setup window.

From version 0.4.4 to 0.4.5
- change in call handling for ringing.
- remote call connection stats counted as incoming for near leg.
- inviteRemote can pre-stuff authentication header on redirection.
- invite handling to assure interface address gets set if non-domain call.
- invite mesh network redirection support possible.

From version 0.4.3 to 0.4.4
- logging of state change, period and reload requests.
- logging of registry activation and releases.